2014-05-10  Benno Schulenberg  <bensberg@justemail.net>
	* doc/texinfo/nano.texi: Make syntax highlighting into a separate
	section, and add the still missing section on rebinding keys.

2014-05-10  Mark Majeres  <mark@engine12.com>
	* src/*.h, src/*.c: Make it possible for the foreground colour of
	interface elements to be bright.

2014-05-09  Benno Schulenberg  <bensberg@justemail.net>
	* src/winio.c (get_mouseinput): Count only shortcuts that are actually
	shown, so that clicking on the ones after ^T (Speller/Linter) will work
	again correctly.  This fixes the second part of Savannah bug #42093.
	* src/global.c (shortcut_init, strtosc): Do not define nor accept
	shortcuts for functions that are disabled.
	* src/global.c (shortcut_init, strtosc): Define shortcut for the linter
	when speller is disabled, and fix compilation with --disable-speller.
	* src/global.c (shortcut_init, strtosc), doc/man/nanorc.5: Put softwrap
	back among the "Appearance" toggles.
	* doc/man/nanorc.5: Describe bindable functions in the third person.

2014-05-06  Benno Schulenberg  <bensberg@justemail.net>
	* doc/texinfo/nano.texi: Let makeinfo figure out the node pointers.
	* doc/syntax/texinfo.nanorc: New file, colouring for Texinfo files.
	* doc/texinfo/nano.texi: Add sections on the Cutbuffer and the Mark,
	remove option '-?', and make some other tweaks.
	* doc/man/{nano.1,nanorc.5}, doc/texinfo/nano.texi: Synchronize the
	documentation, and tweak some wording here and there.
	* doc/syntax/texinfo.nanorc: Stop the brace content from spilling.

2014-05-05  Benno Schulenberg  <bensberg@justemail.net>
	* doc/man/nanorc.5: Give syntax highlighting its own section,
	add the "header" command, tweak some wording and formatting,
	and trim some duplicate introductory information.
	* src/global.c (strtosc), doc/man/nanorc.5: Allow the function
	do_cut_till_end (naming it "cutrestoffile") to be rebound.
	* doc/syntax/nanorc.nanorc: Add the four new *color options.